# ftp

./: CMakeLists.txt  Makefile  README.md  a.out  client  libft  server  twochar.cpp
client/: client.c
client.dSYM/Contents/Resources/DWARF/: client
clientTest/: ._steam.dmg  bs  client  steam.dmg
incl/: client.h  ftp.h  server.h
server/: dir_cmd.c  init_session.c  sendfile.c  sig.c  socket.c
server.dSYM/Contents/Resources/DWARF/: server
src/: client.c  create_temp_file.c  dir_cmd.c  init_session.c  recvfile.c  sendfile.c  server.c  server_rewrite.c  sig.c  socket.c
src_client/: c_client.c  c_dir_cmd.c  c_help_useage_quit.c  c_passive.c  c_retrieve.c  c_store.c  client.c
src_common/: init_session.c  is_file.c  recvfile.c  sendfile.c  session.c  sig.c  socket.c
src_server/: client.c  dir_cmd.c  s_client.c  s_cwd.c  s_dir_cmd.c  s_help.c  s_passive.c  s_retrieve.c  s_store.c  server.c  sig.c
