cmake_minimum_required(VERSION 3.6)
project(ftp)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
		incl/client.h
		incl/ftp.h
		incl/server.h
		libft/incl/bool.h
		libft/incl/char.h
		libft/incl/cnvrsn.h
		libft/incl/gnl.h
		libft/incl/lst.h
		libft/incl/mem.h
		libft/incl/net.h
		libft/incl/num.h
		libft/incl/printf.h
		libft/incl/put.h
		libft/incl/return_types.h
		libft/incl/str.h
		libft/incl/tbl.h
		libft/src/char/ft_isalnum.c
		libft/src/char/ft_isalpha.c
		libft/src/char/ft_isascii.c
		libft/src/char/ft_isdigit.c
		libft/src/char/ft_islower.c
		libft/src/char/ft_isprint.c
		libft/src/char/ft_isspc.c
		libft/src/char/ft_isupper.c
		libft/src/cnvrsn/ft_atoi.c
		libft/src/cnvrsn/ft_itoa.c
		libft/src/cnvrsn/ft_itoabse.c
		libft/src/ft_printf/ft_printf.c
		libft/src/ft_printf/pf_cast_di.c
		libft/src/ft_printf/pf_cast_oux.c
		libft/src/ft_printf/pf_ihelp.c
		libft/src/ft_printf/pf_initstructs.c
		libft/src/ft_printf/pf_is.c
		libft/src/ft_printf/pf_itoabse.c
		libft/src/ft_printf/pf_mod.c
		libft/src/ft_printf/pf_print_c.c
		libft/src/ft_printf/pf_print_i.c
		libft/src/ft_printf/pf_print_o.c
		libft/src/ft_printf/pf_print_p.c
		libft/src/ft_printf/pf_print_perc.c
		libft/src/ft_printf/pf_print_s.c
		libft/src/ft_printf/pf_print_x.c
		libft/src/ft_printf/pf_putchar.c
		libft/src/ft_printf/pf_puterror.c
		libft/src/ft_printf/pf_putnbr.c
		libft/src/ft_printf/pf_putstr.c
		libft/src/ft_printf/pf_tick.c
		libft/src/ft_printf/pf_typechr.c
		libft/src/ft_printf/pf_width.c
		libft/src/gnl/gnl.c
		libft/src/lst/ft_lstadd.c
		libft/src/lst/ft_lstdel.c
		libft/src/lst/ft_lstdelone.c
		libft/src/lst/ft_lstdup.c
		libft/src/lst/ft_lsteadd.c
		libft/src/lst/ft_lstiter.c
		libft/src/lst/ft_lstlen.c
		libft/src/lst/ft_lstmap.c
		libft/src/lst/ft_lstnew.c
		libft/src/lst/ft_lstnewstak.c
		libft/src/mem/ft_bzero.c
		libft/src/mem/ft_memalloc.c
		libft/src/mem/ft_memccpy.c
		libft/src/mem/ft_memchr.c
		libft/src/mem/ft_memcmp.c
		libft/src/mem/ft_memcpy.c
		libft/src/mem/ft_memdel.c
		libft/src/mem/ft_memmove.c
		libft/src/mem/ft_memset.c
		libft/src/net/ft_domtoip.c
		libft/src/net/ft_gethstaddr.c
		libft/src/net/ft_getifaceaddr.c
		libft/src/net/ft_isaddrset.c
		libft/src/num/ft_numlen.c
		libft/src/put/ft_putchar.c
		libft/src/put/ft_putchar_fd.c
		libft/src/put/ft_putclst.c
		libft/src/put/ft_putendl.c
		libft/src/put/ft_putendl_fd.c
		libft/src/put/ft_puterror.c
		libft/src/put/ft_putnbr.c
		libft/src/put/ft_putnbr_fd.c
		libft/src/put/ft_putnlst.c
		libft/src/put/ft_putstr.c
		libft/src/put/ft_putstr_fd.c
		libft/src/put/ft_putstrrev.c
		libft/src/put/ft_puttbl.c
		libft/src/str/ft_cntbnespc.c
		libft/src/str/ft_cntbspc.c
		libft/src/str/ft_cnttotspc.c
		libft/src/str/ft_cntwrds.c
		libft/src/str/ft_dirjoin.c
		libft/src/str/ft_isstralnum.c
		libft/src/str/ft_isstralpha.c
		libft/src/str/ft_isstrascii.c
		libft/src/str/ft_isstrdigit.c
		libft/src/str/ft_isstrprint.c
		libft/src/str/ft_nxtwrdlen.c
		libft/src/str/ft_strcat.c
		libft/src/str/ft_strchr.c
		libft/src/str/ft_strclr.c
		libft/src/str/ft_strcmp.c
		libft/src/str/ft_strconcat.c
		libft/src/str/ft_strcpy.c
		libft/src/str/ft_strdel.c
		libft/src/str/ft_strdup.c
		libft/src/str/ft_strequ.c
		libft/src/str/ft_striter.c
		libft/src/str/ft_striteri.c
		libft/src/str/ft_strjoin.c
		libft/src/str/ft_strjoinn.c
		libft/src/str/ft_strlcat.c
		libft/src/str/ft_strlen.c
		libft/src/str/ft_strmap.c
		libft/src/str/ft_strmapi.c
		libft/src/str/ft_strncat.c
		libft/src/str/ft_strncmp.c
		libft/src/str/ft_strncpy.c
		libft/src/str/ft_strndup.c
		libft/src/str/ft_strnequ.c
		libft/src/str/ft_strnew.c
		libft/src/str/ft_strnstr.c
		libft/src/str/ft_strrchr.c
		libft/src/str/ft_strrev.c
		libft/src/str/ft_strsplit.c
		libft/src/str/ft_strstr.c
		libft/src/str/ft_strstrip.c
		libft/src/str/ft_strsub.c
		libft/src/str/ft_strtrim.c
		libft/src/str/ft_tolower.c
		libft/src/str/ft_toupper.c
		libft/src/tbl/ft_crafttbl.c
		libft/src/tbl/ft_getenvar.c
		libft/src/tbl/ft_itbllen.c
		libft/src/tbl/ft_tbladdl.c
		libft/src/tbl/ft_tbldel.c
		libft/src/tbl/ft_tbldup.c
		libft/src/tbl/ft_tbllen.c
		libft/src/tbl/ft_tblrepline.c
		libft/src/tbl/ft_tblrmline.c
		src_client/c_client.c
		src_client/c_dir_cmd.c
		src_client/c_help_useage_quit.c
		src_client/c_passive.c
		src_client/c_retrieve.c
		src_client/c_store.c
		src_common/is_file.c
		src_common/recvfile.c
		src_common/sendfile.c
		src_common/session.c
		src_common/sig.c
		src_common/socket.c
		src_server/s_client.c
		src_server/s_cwd.c
		src_server/s_dir_cmd.c
		src_server/s_help.c
		src_server/s_passive.c
		src_server/s_retrieve.c
		src_server/s_store.c
		src_server/server.c)

add_executable(ftp ${SOURCE_FILES})